docs(67): record the phase-close baseline delta and the FIX-03 verdict
- Phase-close npm test (two runs), npm run lint, gradlew build captured
- Gate comparison: close set identical to phase-start 11-name deterministic gate set
- Two beforeAll hook-timeout flakes excluded per D-08 (hover.test.ts, line-break-validation.test.ts)
- FIX-03 verdict: not achieved as written; names interop failures and JDK-17 gap; notes CI evidence (PR #496, 97a2e6b) covering vsce packaging and IntelliJ compile